# CrowFunding

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
contract/: Cargo.toml
contract/src/: lib.rs
src/: App.tsx  index.css
src/components/: AuroraBackground.tsx  CampaignCard.tsx  DonateForm.tsx  DonationFeed.tsx  ErrorToast.tsx  HeroCard.tsx  Navbar.tsx  WalletCard.tsx
src/lib/: stellar.ts  walletKit.ts
